--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -178,7 +178,7 @@
     notify you of any changes by posting the new Privacy Policy on
     this page.
   </p>
-  <p>This policy is effective as of 2022-01-20</p>
+  <p>This policy is effective as of 2024.05.05</p>
   <p><strong>Contact Us</strong></p>
   <p>
     If you have any questions or suggestions about my
